<resources>
    <string name="app_name">Prismatik Remote</string>

    // Onboarding
    <string name="serverIpEditText">Ip Address</string>
    <string name="serverPortEditText">Port</string>
    <string name="apiKeyEditText">API Key</string>
    <string name="saveButton">Save</string>
    <string name="scanButton">Scan</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
